# CoLog

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  PHASE1.md  PHASE2.md
src/: main.cpp
src/colog/: async_logger.cpp  async_logger.h  colog.h  console_sink.cpp  console_sink.h  file_sink.cpp  file_sink.h  formatter.h  level.h  logger.cpp  logger.h  null_sink.h  pattern_formatter.cpp  pattern_formatter.h  record.h  registry.cpp  registry.h  sink.h
src/colog/async/: async_backend.cpp  async_backend.h  lock_free_queue.h
